<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FARO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_create_new_event">CreateNewEvent</string>
    <string name="title_activity_event_landing_page">EventLandingPage</string>
    <string name="title_activity_app_landing_page">AppLandingPage</string>
    <string name="title_activity_calendar_view">CalendarView</string>
    <string name="title_activity_event_calendar_view">EventCalendarView</string>
    <string name="title_activity_main">FARO</string>
    <string name="StartDate">Start:</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="event_status">Medium Text</string>
    <string name="event_name">Large Text</string>
    <string name="Polls">Polls</string>
    <string name="CreateNewEvent">Create New Event</string>
    <string name="EventName">Event Name</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="NoResponse">No Response</string>
    <string name="IfAccepted">If Accepted</string>
    <string name="EventCreator">Event Creator</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="MAYBE">MAYBE</string>
    <string name="GotoAppLandingPage">Go to App Landing Page</string>
    <string name="title_activity_poll_landing_page">PollLandingPage</string>
    <string name="title_activity_create_new_poll">CreateNewPoll</string>
    <string name="title_activity_edit_event_details">UpdateEventDetails</string>

    <string name="hello_world">Hello world!</string>
    <string name="EditEvent">Edit Event</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_edit_event">EditEvent</string>
    <string name="title_activity_exception_print_page">ExceptionPrintPage</string>
    <string name="title_activity_assignment_landing_page">AssignmentLandingPage</string>
    <string name="title_activity_create_new">CreateNewActivity</string>
    <string name="Description">Description</string>
    <string name="controlEvent">Control Event?</string>
    <string name="title_activity_dup_poll_landing_page">Leanback DupPollLandingPage Title</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <string name="facebook_app_id">545550208965496</string>

    <!-- Use the below app id belonging to farodeveloper@gmail.com when facebook unlocks the account -->
    <!-- string name="facebook_app_id">692745024183708</string -->

    <string name="fb_login_protocol_scheme">fb692745024183708</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="vote">VOTE</string>
    <string name="delete">Delete</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_pick_poll_winner">PickPollWinner</string>
    <string name="winner">Winner</string>
    <string name="title_activity_closed_poll_landing_page">ClosedPollLandingPage</string>
    <string name="change_winner">Change Winner</string>
    <string name="re_open_poll">Re-open Poll</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="are_you_sure_you_want_to_delete_the_activity">Are you sure you want to delete the Activity?</string>
    <string name="title_activity_activity_list_page">ActivityListPage</string>
    <string name="title_activity_activity_landing_page">ActivityLandingPage</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_name">Activity Name</string>
    <string name="event_description">Event Description</string>
    <string name="multi_choice">Multi-Choice?</string>
    <string name="poll_description">Poll Description</string>
    <string name="poll_option">Poll Option</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_edit_assignment">EditAssignment</string>
    <string name="title_activity_more_options">MoreOptions</string>
    <string name="title_activity_more_options_page">MoreOptionsPage</string>
    <string name="title_activity_tab_try">TabTry</string>
    <string name="google_place_api">AIzaSyCX65e5Gnls0VjcSNauPQBZPOrJ2cuaSTY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_invite_friend_page">InviteFriendPage</string>
    <string name="friends">Friends</string>
    <string name="add">Add</string>
    <string name="location">Location</string>
    <string name="title_activity_blank">Blank</string>

    <string name="screen_slide_text">Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
