<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.zik.faro.frontend.EditEvent">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:id="@+id/eventName"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/from"
    android:id="@+id/startDateTextView"
    android:layout_below="@+id/eventName"
    android:layout_alignParentStart="true"
    android:layout_marginTop="15dp"
    android:enabled="false"
    android:textColor="#ff000000"
    android:textSize="@dimen/abc_text_size_medium_material" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/startDateButton"
    android:textSize="@dimen/abc_text_size_medium_material"
    android:layout_below="@+id/startDateTextView" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/startTimeButton"
    android:layout_alignBottom="@+id/startDateButton"
    android:layout_alignParentEnd="true" />



<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/to"
    android:id="@+id/EndDateTextView"
    android:layout_below="@+id/startDateButton"
    android:layout_alignParentStart="true"
    android:layout_marginTop="15dp"
    android:enabled="false"
    android:textColor="#ff000000"
    android:textSize="@dimen/abc_text_size_medium_material" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/endDateButton"
    android:textSize="@dimen/abc_text_size_medium_material"
    android:layout_below="@+id/EndDateTextView" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/endTimeButton"
    android:layout_alignBottom="@+id/endDateButton"
    android:layout_alignParentEnd="true" />



<Button
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/OK"
    android:id="@+id/editEventOK"
    android:layout_alignParentBottom="true"
    android:layout_toStartOf="@+id/eventName" />

<Button
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Cancel"
    android:id="@+id/editEventCancel"
    android:layout_alignTop="@+id/editEventOK"
    android:layout_toStartOf="@+id/endTimeButton" />

</RelativeLayout>
